Fixed a bunch of annoying/major graphical issues with the calendar
* Fixed a bug where the calendar would keep shrinking smaller and
  smaller as you resized the window.
* Fixed the size and alignment of the time span combobox in the corner,
  which fixes a bug where the text was cut off.
* Fixed a bug where the schedule header would grow as you flipped
  to the next or previous week.
* Dropped javascript from the resizing of the calendar (for the most
  part).

--- a/airtime_mvc/public/css/styles.css
+++ b/airtime_mvc/public/css/styles.css
@@ -1145,9 +1145,50 @@ dt.block-display, dd.block-display {
 	font-size:16px;
 	font-weight:normal;
 }
+
 #schedule_calendar {
-	width:98.5%
+    width: 100%;
 }
+
+#schedule_block_table {
+	width: 100%;
+}
+
+thead tr.fc-first
+{
+	height: 32px;
+	line-height: 32px;	
+}
+
+/** Extremely nasty workaround for a fullcalendar bug, where clicking "Add Show"
+    would cause this large space under the table header. The CSS to get to that
+    is ridiculously complicated and set in the HTML (!) dynamically with JS,
+    which makes it a pain in the ass to fix. That's why we're overriding it 
+    with !important here.
+*/
+.fc-view > div:nth-child(2)
+{
+	top: 34px !important;
+}
+
+#schedule_calendar_cell
+{
+    width: 100%;
+    height: 100%;
+    padding: 0px;
+    padding-right: 20px !important;
+}
+
+.schedule_change_slots /** The time span combobox */
+{
+	margin-top: 4px; /** Center it vertically */
+}
+
+#schedule_block_table td {
+	padding: 0px;
+	vertical-align: top;
+}
+
 div.ui-datepicker {
 	/*font-size: 75%;*/
 }
